# uriparse-rs-no-std

./: Cargo.toml
src/: authority.rs  fragment.rs  lib.rs  path.rs  query.rs  relative_reference.rs  scheme.rs  uri.rs  uri_reference.rs  utility.rs
